[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mazegen"
version = "1.0.0"
description = "Reusable maze generation module from A-Maze-ing"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["."]
include = ["maze_generator*"]